<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_category_general"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="system"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="pref_theme"
            android:summary="@string/settings_theme_summary"
            android:title="@string/settings_theme_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_version"
            android:title="@string/settings_version_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_notifications"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_notifications_scan"
            android:summary="@string/settings_notifications_scan_summary"
            android:title="@string/settings_notifications_scan_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_notifications_protection"
            android:summary="@string/settings_notifications_protection_summary"
            android:title="@string/settings_notifications_protection_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_data"
        app:iconSpaceReserved="false">

        <Preference
            android:key="pref_clear_scan_history"
            android:summary="@string/settings_clear_scan_history_summary"
            android:title="@string/settings_clear_scan_history_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_clear_all_data"
            android:summary="@string/settings_clear_all_data_summary"
            android:title="@string/settings_clear_all_data_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_about"
        app:iconSpaceReserved="false">

        <Preference
            android:key="pref_privacy_policy"
            android:summary="@string/settings_privacy_policy_summary"
            android:title="@string/settings_privacy_policy_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_terms_of_service"
            android:summary="@string/settings_terms_of_service_summary"
            android:title="@string/settings_terms_of_service_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>